--- a/client/html/perfil.html
+++ b/client/html/perfil.html
@@ -111,7 +111,7 @@
                         <input type="number" id="meta-longo-valor" placeholder="0,00" step="0.01">
                     </div>
                     <div class="form-group">
-                        <label for="meta-longo-prazo">Prazo (meses)</label>
+                        <label for="meta-longo-prazo">Prazo (anos)</label>
                         <input type="number" id="meta-longo-prazo" placeholder="0">
                     </div>
                 </section>
