--- a/client/html/minhas-financas.html
+++ b/client/html/minhas-financas.html
@@ -53,6 +53,38 @@
                     <span class="current-month">Dezembro 2025</span>
                     <button class="next-month">&gt;</button>
                 </div>
+                
+                <!-- Cards de resumo do mês -->
+                <div class="month-summary-cards">
+                    <div class="summary-card receita-card">
+                        <div class="card-icon">
+                            <i class="fas fa-arrow-up"></i>
+                        </div>
+                        <div class="card-content">
+                            <h3>Receitas</h3>
+                            <p class="card-value" id="receitas-total">R$ 0,00</p>
+                        </div>
+                    </div>
+                    <div class="summary-card despesa-card">
+                        <div class="card-icon">
+                            <i class="fas fa-arrow-down"></i>
+                        </div>
+                        <div class="card-content">
+                            <h3>Despesas</h3>
+                            <p class="card-value" id="despesas-total">R$ 0,00</p>
+                        </div>
+                    </div>
+                    <div class="summary-card saldo-card">
+                        <div class="card-icon">
+                            <i class="fas fa-balance-scale"></i>
+                        </div>
+                        <div class="card-content">
+                            <h3>Saldo</h3>
+                            <p class="card-value" id="saldo-total">R$ 0,00</p>
+                        </div>
+                    </div>
+                </div>
+                
                 <section class="financas-tables">
                 <div class="table-container">
                     <h2>Planilha de Receitas</h2>
