--- a/client/html/chat.html
+++ b/client/html/chat.html
@@ -147,14 +147,20 @@
                 setLoading(true);
                 showThinkingIndicator();
 
+                // Obter token de autenticação
+                const token = localStorage.getItem('merfin_token');
+                if (!token) {
+                    throw new Error('Você precisa estar autenticado para usar o chat');
+                }
+
                 const response = await fetch('http://localhost:5001/api/chat', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}`
                     },
                     body: JSON.stringify({
-                        message: messageText,
-                        sessionId: sessionId
+                        message: messageText
                     })
                 });
 
